test/integration/integration/tests/resources/tests/api-with-operational-policy.yaml
# Copyright (c) 2023, WSO2 LLC. (https://www.wso2.com) All Rights Reserved.
#
# WSO2 LLC. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the
# specific language governing permissions and limitations
# under the License.

# Copyright (c) 2023, WSO2 LLC. (https://www.wso2.com) All Rights Reserved.
#
# WSO2 LLC. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: dp.wso2.com/v1alpha1
kind: API
metadata:
  name: test-api-with-operatinal-policy
  namespace: gateway-integration-test-infra
spec:
  apiDisplayName: API with operatinal policy
  apiType: REST
  apiVersion: 1.0.0
  context: /operatinal-policy-api/1.0.0
  definitionFileRef: swagger-definition-webhook
  prodHTTPRouteRefs:
  - test-api-with-operatinal-policy-httproute
  organization: wso2-org
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-api-with-operatinal-policy-httproute
  namespace: gateway-integration-test-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: Default
  hostnames:
  - backend-base-path.test.gw.wso2.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /test-api-with-operatinal-policy/1.0.0
      method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /test-get-path
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /test-api-with-operatinal-policy/1.0.0
      method: POST
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /test-post-path
    backendRefs:
    - name: infra-backend-v1
      port: 8080
